@@ -32,6 +32,7 @@ export(cluster)
 export(convertFromBIOM)
 export(convertFromDADA2)
 export(convertFromPhyloseq)
+export(convertToBIOM)
 export(convertToPhyloseq)
 export(countDominantFeatures)
 export(countDominantTaxa)
@@ -164,6 +165,7 @@ exportMethods(calculateOverlap)
 exportMethods(calculateUnifrac)
 exportMethods(checkTaxonomy)
 exportMethods(cluster)
+exportMethods(convertToBIOM)
 exportMethods(convertToPhyloseq)
 exportMethods(countDominantFeatures)
 exportMethods(countDominantTaxa)
